--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "formidable": "^3.5.2",
     "fs-extra": "^11.3.0",
     "multer": "^1.4.5-lts.2",
     "sharp": "^0.33.5"
+  },
+  "devDependencies": {
+    "netlify-cli": "^19.1.4"
   }
 }
